# ottawa-transit-skill

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
ottawa_transit_skill/: alexa.py
tests/: test_ottawa_transit_skill.py
