[tool.poetry]
name = "ottawa-transit-skill"
version = "0.1.0"
description = "Alexa skill to get OCTranspo information"
authors = ["David Buckley <buckley.w.david@gmail.com>"]
license = "MIT"

readme = 'README.md'
repository = "https://github.com/buckley-w-david/ottawa-transit-skill"
homepage = "https://github.com/buckley-w-david/ottawa-transit-skill"

[tool.poetry.dependencies]
python = "^3.6"
python-ottawa-transit = "^0.2.0"
ask-sdk = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.5"
pylint = "^1.9"
mypy = "^0.610.0"
black = "^18.3-alpha.0"
hypothesis = "^3.66"
